# xiaohei

./: .env.backup.neon.20260428172157  .env.production.example  .gitignore  .tmp_admin_slice2_result.json  .tmp_extension_panel_preview.html  .tmp_listing_card_preview.html  .tmp_selection_backfill_after_cleanup_test.jsonl  .tmp_selection_backfill_benchmark.jsonl  .tmp_selection_backfill_dryrun.jsonl  .tmp_selection_backfill_local_loop_progress.jsonl  .tmp_selection_backfill_local_slow_loop_progress.jsonl  .tmp_selection_backfill_loop_progress.jsonl  .tmp_selection_backfill_loop_test.jsonl  .tmp_selection_backfill_progress.jsonl  .tmp_selection_categories_10.csv  .tmp_selection_categories_50.csv  .tmp_selection_categories_50_slow.csv  .tmp_selection_categories_checkpoint_test.csv  .tmp_selection_categories_cross_dept_20.csv  .tmp_selection_categories_cross_dept_20_timed.csv  .tmp_selection_categories_cross_dept_50_timed.csv  .tmp_selection_categories_fashion_20.csv  .tmp_selection_categories_full_checkpoint.json  .tmp_selection_categories_global_cap.csv  .tmp_selection_categories_music_checkpoint.csv  .tmp_selection_categories_music_checkpoint.json  .tmp_selection_categories_two_depts.csv  .tmp_selection_dimensions_auth_probe.jsonl  .tmp_selection_dimensions_backfill_loop_progress.jsonl  .tmp_selection_dimensions_speed_probe.jsonl  .tmp_selection_dimensions_speed_probe_100.jsonl  .tmp_selection_dimensions_speed_probe_c5.jsonl  .tmp_selection_dimensions_write_probe_100.jsonl  .tmp_selection_dimensions_write_probe_after_fix.jsonl  .tmp_selection_products_dryrun.jsonl  (+60 more)
(+363 files in other folders)
